--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,28 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.table-of-game {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  width: 245px;
+  height: 245px;
+  background-color: aqua;
 }
 
-.App-link {
-  color: #61dafb;
+.cube {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  margin: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.red{
+  background-color: red;
 }
+.green{
+  background-color: rgb(9, 255, 0);
+}
+.blue{
+  background-color: rgb(0, 17, 255);
+}
+
